Add 2-字节码 Update 1-Java内存结构